# matcherator

./: MANIFEST.in  README.md  display-dependencies.py  match_biber.py  match_rules.py  pyproject.toml  show-tagging.py
matcherator/: __init__.py  biber.py  generic.py  matcherator.py
matcherator/rules/: llm-patterns.json  pseudobiber.json
rules/: llm-patterns.json  pseudobiber.json
tests/: test_cases.json  test_harness.py  test_pybiber.py  test_ruleset.py
